# FRE_2023

./: .gitignore  .gitmodules  README.md
0_SMR_OLD/fre2019/: .test_mrc.swo  changes  data.debug  drivefwd  filtertest  gyrotest  gyrotest.save  helsingor  ledledled  log.save.1  log_task1_find_linje  mappingtest  modulustest  modulustest2  modulustest3  movingobject  mrc  mrcLog  obstacleTest  scantest  slam  task2_F19  task3_advanced  task3_new  task3_test  test  test2  test2leds  test3  testOdo  test_static  testest  testyolo  ulmsserver.cmd  ulmsserver.ini~
1_src/1_CV/: CV_test.ipynb  cascade_classifier.py  (+1 more)
1_src/1_CV/smr_task4/: CMakeCache.txt  CMakeLists.txt  Client  Makefile  Makefile copy 2  SIFT  Server  cmake_install.cmake  compile_commands.json  data.debug  main copy.cpp  temp.txt  testClient
1_src/1_CV/smr_task4/ServerTask4/: Advanced_server_main.cpp  Makefile  copy of simple_client_main.cpp  data.debug  logParam.txt  simple_client_main2018_2.cpp  simple_server_main.cpp  simple_server_main1.cpp  simple_server_main2018.cpp  simple_server_main_not_working.cpp  simple_server_main_working1430.cpp  simple_server_main_working1700.cpp  simple_server_main_working_1030.cpp  test_mrc
1_src/1_CV/smr_task4/src/Client/: simple_client_main.cpp
1_src/1_CV/smr_task4/src/Server/: ServerSocket.cpp  main.cpp
2_doc/: Unavngivet diagram.drawio
fre2019/: .log.swp  .project  .task3_test.swp  .task3test.swp  fwdsc  log.save  servo  task1_F19  task3Finalizing  task3test  task4final  task4test  testTurn  test_mrc  test_mrc1  test_static_ny  testnew  transtest  wait  wait1000
(+66 files in other folders)
